[gd_scene load_steps=38 format=3 uid="uid://f2ivkfoof281"]

[ext_resource type="Texture2D" uid="uid://bmn5jb1xcp8lb" path="res://assets/game/characters/rogues.png" id="1_vh0fs"]
[ext_resource type="Script" uid="uid://c5gmfinumygu4" path="res://scripts/game/components/core/hurtbox_component.gd" id="2_f4dwc"]
[ext_resource type="Script" uid="uid://b6ojek6ypaial" path="res://scripts/game/state_machine/node_state_machine.gd" id="3_ftcjs"]
[ext_resource type="Script" uid="uid://cqq8dehx4mn2a" path="res://scenes/characters/enemy/skeleton_soldier/idle_state.gd" id="4_qvi1n"]
[ext_resource type="Script" uid="uid://bkalfexdm6mfi" path="res://scripts/game/states/enemy/hurt_state.gd" id="5_4ayy1"]
[ext_resource type="Script" uid="uid://0nia7tc4g617" path="res://scripts/game/states/enemy/down_state.gd" id="5_down"]
[ext_resource type="Script" uid="uid://ba75h6leyutgo" path="res://scripts/game/components/animation/down_animation_component.gd" id="5_down_anim"]
[ext_resource type="Script" uid="uid://csnsynjeksolq" path="res://scenes/characters/enemy/skeleton_soldier/flee_state.gd" id="7_qalk0"]
[ext_resource type="Script" uid="uid://cu8mashyovlri" path="res://scenes/characters/enemy/skeleton_soldier/death_state.gd" id="8_tkq6p"]
[ext_resource type="Script" uid="uid://blt8qxujohwor" path="res://scripts/game/components/enemy/enemy_sense_component.gd" id="9_u7k36"]
[ext_resource type="Script" uid="uid://dphatmavxn3u8" path="res://scripts/game/components/enemy/pathfinding_component.gd" id="10_htvth"]
[ext_resource type="Script" uid="uid://c7bsngihe1vew" path="res://scripts/game/components/core/movement_component.gd" id="11_a0cnn"]
[ext_resource type="Script" uid="uid://ch8r0xsbtuj63" path="res://scripts/game/components/core/health_component.gd" id="12_ghisy"]
[ext_resource type="Script" uid="uid://850sk6q2ppie" path="res://scripts/game/components/animation/wobble_animation_component.gd" id="13_x8d76"]
[ext_resource type="Script" uid="uid://bstid0r2r8cgw" path="res://scripts/game/components/animation/death_animation_component.gd" id="14_mpvpb"]
[ext_resource type="Script" uid="uid://echlin1jyex0" path="res://scripts/game/components/animation/hurt_stagger_animation_component.gd" id="15_mxi1o"]
[ext_resource type="Script" uid="uid://bcayodtipc5tk" path="res://scripts/game/components/enemy/separation_component.gd" id="16_7ptgb"]
[ext_resource type="Script" uid="uid://ddick5omjoqrp" path="res://scripts/game/components/animation/fade_animation_component.gd" id="17_nauew"]
[ext_resource type="Script" uid="uid://b35kv6kb2iivw" path="res://scripts/game/components/ui/damage_number_component.gd" id="18_k3ael"]
[ext_resource type="PackedScene" uid="uid://cn74jcjtvrdmu" path="res://scenes/objects/coin.tscn" id="20_yi8sa"]
[ext_resource type="Script" uid="uid://5xngd2y3x7h" path="res://scripts/game/components/enemy/enemy_damage_component.gd" id="21_oirct"]
[ext_resource type="Script" uid="uid://duisvww7b2r3b" path="res://scripts/game/components/ui/text_bubble_component.gd" id="22_0aghf"]
[ext_resource type="Resource" path="res://resources/dialogue/skeleton_spawn_dialogue.tres" id="23_4xr3s"]
[ext_resource type="Script" uid="uid://dhxbfyvsdh8be" path="res://scripts/game/components/systems/kill_tracker_component.gd" id="24_o1e2f"]
[ext_resource type="Script" uid="uid://cxxxuga54xuom" path="res://scripts/game/components/systems/nemesis_component.gd" id="25_6pqm8"]
[ext_resource type="Script" uid="uid://b5tpjb2kqlkgj" path="res://scripts/game/systems/nemesis_trait_data.gd" id="26_piu8e"]
[ext_resource type="Resource" path="res://resources/traits/coward_trait.tres" id="27_6er55"]
[ext_resource type="Script" uid="uid://dm2pg188h33mq" path="res://scripts/game/components/collectibles/hit_drop_component.gd" id="28_uqr0l"]
[ext_resource type="Script" uid="uid://cso5vhwnmemab" path="res://scripts/game/components/combat/dash_component.gd" id="29_dash"]
[ext_resource type="Script" uid="uid://ds6u6cfpglpkp" path="res://scenes/characters/enemy/rogue/dash_state.gd" id="30_dash_state"]
[ext_resource type="Script" uid="uid://dm8kv7idfcx3e" path="res://scripts/game/components/enemy/slot_seeker_component.gd" id="31_slot_seeker"]
[ext_resource type="Script" uid="uid://dbp82361dcucx" path="res://scripts/game/components/core/facing_component.gd" id="32_facing"]
[ext_resource type="Script" uid="uid://blyx375gdxrxj" path="res://scripts/game/components/combat/combat_director_request_component.gd" id="33_director_req"]
[ext_resource type="Script" uid="uid://j04pe2ujhk6a" path="res://scenes/characters/enemy/rogue/engage_state.gd" id="34_engage"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vdd08"]
radius = 7.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ap80"]
radius = 6.13303
height = 22.9611

[sub_resource type="GDScript" id="GDScript_vh0fs"]
script/source = "extends NodeState

@export var movement: MovementComponent
@export var pathfinding: PathfindingComponent
@export var sense: EnemySenseComponent
@export var hurtbox: HurtboxComponent
@export var health: HealthComponent
@export var wobble_animation: WobbleAnimationComponent
@export var separation: SeparationComponent
@export var slot_seeker: Node  # SlotSeekerComponent

@export_range(0.0, 1.0) var pathfinding_weight: float = 0.7
@export_range(0.0, 1.0) var separation_weight: float = 0.3
## Distance threshold to consider the enemy at its slot position
@export var slot_arrival_distance: float = 10.0

var got_hurt: bool = false
var target: Node2D = null

func _on_process(delta : float) -> void:
	if got_hurt:
		got_hurt = false
		transition.emit(\"Hurt\")
	if not movement or not pathfinding:
		return

	# Check if enemy has reached its slot position -> transition to Engage
	if slot_seeker and slot_seeker.has_slot():
		var slot_pos = slot_seeker.get_target_position()
		var distance_to_slot = owner.global_position.distance_to(slot_pos)
		if distance_to_slot <= slot_arrival_distance:
			transition.emit(\"Engage\")
			return

	# Use slot position if available, otherwise direct chase with backstab targeting
	var chase_target_pos: Vector2
	if slot_seeker and slot_seeker.has_method(\"get_target_position\"):
		chase_target_pos = slot_seeker.get_target_position()
	elif target:
		chase_target_pos = target.global_position
		if target.get(\"facing\"):
			chase_target_pos = target.facing.get_back_position(15.0)
	else:
		chase_target_pos = owner.global_position

	pathfinding.set_target_position_throttled(chase_target_pos)

	# Get pathfinding direction
	var path_direction = pathfinding.get_target_direction()

	# Get separation direction
	var separation_direction = Vector2.ZERO
	if separation:
		separation_direction = separation.get_separation_vector()

	# Blend directions with weights
	var final_direction = Vector2.ZERO
	if path_direction != Vector2.ZERO or separation_direction != Vector2.ZERO:
		final_direction = (
			path_direction * pathfinding_weight +
			separation_direction * separation_weight
		).normalized()

	# Update wobble animation
	if wobble_animation:
		var player_pos = target.global_position if target else Vector2.ZERO
		wobble_animation.play(delta, final_direction, player_pos)

	movement.set_velocity(final_direction)

func _on_physics_process(_delta : float) -> void:
	pass

func _on_next_transitions() -> void:
	pass

func _on_enter() -> void:
	_connect_sense()
	target = sense.current_target
	_connect_hurtbox()
	_connect_health()

	# Request a slot around the target
	if slot_seeker and target and slot_seeker.has_method(\"request_slot_for_target\"):
		slot_seeker.request_slot_for_target(target)

func _on_exit() -> void:
	movement.set_velocity(Vector2.ZERO)
	if wobble_animation:
		wobble_animation.reset()
	_disconnect_hurtbox()
	_disconnect_health()
	_disconnect_sense()


func _connect_hurtbox() -> void:
	if hurtbox and not hurtbox.hurt.is_connected(_on_hurt):
		hurtbox.hurt.connect(_on_hurt)

func _on_hurt(amount) -> void:
	# Damage is already applied by HurtboxComponent
	got_hurt = true

func _disconnect_hurtbox() -> void:
	if hurtbox and hurtbox.hurt.is_connected(_on_hurt):
		hurtbox.hurt.disconnect(_on_hurt)

func _connect_health() -> void:
	if health and not health.died.is_connected(_on_death):
		health.died.connect(_on_death)

func _on_death() -> void:
	transition.emit(\"Death\")

func _disconnect_health() -> void:
	if health and health.died.is_connected(_on_death):
		health.died.disconnect(_on_death)

func _connect_sense() -> void:
	if sense and not sense.is_connected(\"target_lost\", _on_target_lost):
		sense.connect(\"target_lost\", Callable(self, \"_on_target_lost\"))

func _on_target_lost(lost_target):
	if lost_target == target:
		target = null
		transition.emit(\"Idle\")

func _disconnect_sense() -> void:
	if sense and sense.is_connected(\"target_lost\", _on_target_lost):
		sense.disconnect(\"target_lost\", Callable(self, \"_on_target_lost\"))
"

[node name="Rogue" type="CharacterBody2D"]
position = Vector2(0, 2)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_vdd08")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
texture = ExtResource("1_vh0fs")
region_enabled = true
region_rect = Rect2(96, 0, 32, 32)

[node name="HurtboxComponent" type="Area2D" parent="Sprite2D" node_paths=PackedStringArray("health_component")]
collision_layer = 32
collision_mask = 4
script = ExtResource("2_f4dwc")
health_component = NodePath("../../HealthComponent")
metadata/_custom_type_script = "uid://c5gmfinumygu4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtboxComponent"]
position = Vector2(-1, 0)
scale = Vector2(1.14136, 1.13235)
shape = SubResource("CapsuleShape2D_0ap80")
debug_color = Color(0.931449, 0.24244, 0.260464, 0.42)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("3_ftcjs")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("hurtbox", "sense", "health")]
script = ExtResource("4_qvi1n")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
sense = NodePath("../../EnemySenseComponent")
health = NodePath("../../HealthComponent")

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("hurt_animation", "hurtbox")]
script = ExtResource("5_4ayy1")
hurt_animation = NodePath("../../HurtStaggerAnimationComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")

[node name="Down" type="Node" parent="StateMachine" node_paths=PackedStringArray("down_animation", "hurtbox", "health")]
script = ExtResource("5_down")
down_animation = NodePath("../../DownAnimationComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "pathfinding", "sense", "hurtbox", "health", "wobble_animation", "separation", "slot_seeker")]
script = SubResource("GDScript_vh0fs")
movement = NodePath("../../MovementComponent")
pathfinding = NodePath("../../PathfindingComponent")
sense = NodePath("../../EnemySenseComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
wobble_animation = NodePath("../../WobbleAnimationComponent")
separation = NodePath("../../SeparationComponent")
slot_seeker = NodePath("../../SlotSeekerComponent")

[node name="Engage" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "sense", "hurtbox", "health", "wobble_animation", "slot_seeker")]
script = ExtResource("34_engage")
movement = NodePath("../../MovementComponent")
sense = NodePath("../../EnemySenseComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
wobble_animation = NodePath("../../WobbleAnimationComponent")
slot_seeker = NodePath("../../SlotSeekerComponent")
skill_paths = Array[NodePath]([NodePath("../../DashComponent")])

[node name="Flee" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "pathfinding", "sense", "separation", "hurtbox", "health", "facing", "wobble_animation")]
script = ExtResource("7_qalk0")
movement = NodePath("../../MovementComponent")
pathfinding = NodePath("../../PathfindingComponent")
sense = NodePath("../../EnemySenseComponent")
separation = NodePath("../../SeparationComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
facing = NodePath("../../FacingComponent")
wobble_animation = NodePath("../../WobbleAnimationComponent")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("collision_shapes", "death_animation")]
script = ExtResource("8_tkq6p")
collision_shapes = [NodePath("../../Sprite2D/HurtboxComponent/CollisionShape2D"), NodePath("../../CollisionShape2D")]
death_animation = NodePath("../../DeathAnimationComponent")

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash", "hurtbox", "health", "facing")]
script = ExtResource("30_dash_state")
dash = NodePath("../../DashComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
facing = NodePath("../../FacingComponent")
return_state = "Chase"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 3.0
target_desired_distance = 5.0
path_postprocessing = 1

[node name="EnemySenseComponent" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("9_u7k36")
detection_radius = 500.0
metadata/_custom_type_script = "uid://blt8qxujohwor"

[node name="PathfindingComponent" type="Node" parent="." node_paths=PackedStringArray("agent")]
script = ExtResource("10_htvth")
agent = NodePath("../NavigationAgent2D")
metadata/_custom_type_script = "uid://dphatmavxn3u8"

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("character_body", "hurtbox")]
script = ExtResource("11_a0cnn")
character_body = NodePath("..")
hurtbox = NodePath("../Sprite2D/HurtboxComponent")
move_speed = 25.0
metadata/_custom_type_script = "uid://c7bsngihe1vew"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("12_ghisy")
max_health = 800
metadata/_custom_type_script = "uid://ch8r0xsbtuj63"

[node name="WobbleAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite", "facing")]
script = ExtResource("13_x8d76")
sprite = NodePath("../Sprite2D")
facing = NodePath("../FacingComponent")

[node name="DeathAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite", "body")]
script = ExtResource("14_mpvpb")
sprite = NodePath("../Sprite2D")
body = NodePath("..")

[node name="HurtStaggerAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("15_mxi1o")
sprite = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://echlin1jyex0"

[node name="DownAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_down_anim")
sprite = NodePath("../Sprite2D")

[node name="SeparationComponent" type="Node" parent="."]
script = ExtResource("16_7ptgb")

[node name="SlotSeekerComponent" type="Node" parent="."]
script = ExtResource("31_slot_seeker")

[node name="FadeAnimationComponent" type="Node" parent="."]
script = ExtResource("17_nauew")

[node name="DamageNumberComponent" type="Node2D" parent="." node_paths=PackedStringArray("hurtbox_component", "fade_animation_component")]
script = ExtResource("18_k3ael")
hurtbox_component = NodePath("../Sprite2D/HurtboxComponent")
fade_animation_component = NodePath("../FadeAnimationComponent")
font_size = 12

[node name="DeathDropComponent" type="Node" parent="."]

[node name="EnemyDamageComponent" type="Node2D" parent="."]
script = ExtResource("21_oirct")
damage_amount = 1
damage_cooldown = 0.25

[node name="TextBubbleComponent" type="Node2D" parent="."]
script = ExtResource("22_0aghf")
dialogue_data = ExtResource("23_4xr3s")
display_duration = 5.0
vertical_offset = -45.0
font_size = 8

[node name="KillTrackerComponent" type="Node" parent="."]
script = ExtResource("24_o1e2f")

[node name="NemesisComponent" type="Node" parent="."]
script = ExtResource("25_6pqm8")
traits = Array[ExtResource("26_piu8e")]([ExtResource("27_6er55")])

[node name="HitDropComponent" type="Node" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("28_uqr0l")
health_component = NodePath("../HealthComponent")
drop_scene = ExtResource("20_yi8sa")
max_drops = 3

[node name="CombatDirectorRequestComponent" type="Node" parent="."]
script = ExtResource("33_director_req")
default_priority = 60

[node name="DashComponent" type="Node" parent="." node_paths=PackedStringArray("character_body", "hurtbox", "movement", "director_request")]
script = ExtResource("29_dash")
character_body = NodePath("..")
hurtbox = NodePath("../Sprite2D/HurtboxComponent")
movement = NodePath("../MovementComponent")
director_request = NodePath("../CombatDirectorRequestComponent")
dash_speed = 400.0
dash_duration = 0.25
cooldown = 3.0

[node name="FacingComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("32_facing")
sprite = NodePath("../Sprite2D")
