[gd_scene load_steps=3 format=3 uid="uid://c8dash1skill1"]

[ext_resource type="Script" uid="uid://bb2a368iguur2" path="res://scripts/game/skills/modifiers/skill_modifier_component.gd" id="1_skill_modifier"]
[ext_resource type="Script" path="res://scripts/game/components/combat/dash_component.gd" id="2_dash"]

[node name="Dash" type="Node2D"]

[node name="SkillModifierComponent" type="Node" parent="."]
script = ExtResource("1_skill_modifier")

[node name="DashComponent" type="Node" parent="." node_paths=PackedStringArray("skill_modifier")]
script = ExtResource("2_dash")
skill_modifier = NodePath("../SkillModifierComponent")
dash_speed = 600.0
dash_duration = 0.2
cooldown = 1.0
invincible_during_dash = true
